--- a/JavaFX_UI/nbproject/private/private.properties
+++ b/JavaFX_UI/nbproject/private/private.properties
@@ -1,6 +1,9 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.GMapsFX-2.10.0.jar=/Users/filippopiggici/Desktop/GitHub/Lectio/JavaFX_UI/GMapsFX-2.10.0.jar
+file.reference.GMapsFX-2.12.0.jar=/Users/filippopiggici/Desktop/GitHub/Lectio/JavaFX_UI/GMapsFX-2.12.0.jar
+file.reference.sqlite-jdbc-3.16.1.jar=/Users/filippopiggici/Desktop/GitHub/Lectio/JavaFX_UI/sqlite-jdbc-3.16.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
 user.properties.file=/Users/filippopiggici/Library/Application Support/NetBeans/8.2/build.properties
