--- a/JavaFX_UI/nbproject/private/private.properties
+++ b/JavaFX_UI/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.GMapsFX-2.10.0.jar=C:\\Users\\antho_000\\Documents\\GitHub\\Lectio\\JavaFX_UI\\GMapsFX-2.10.0.jar
-file.reference.GMapsFX-2.12.0.jar=C:\\Users\\antho_000\\Documents\\GitHub\\Lectio\\JavaFX_UI\\GMapsFX-2.12.0.jar
-file.reference.sqlite-jdbc-3.16.1.jar=C:\\Users\\antho_000\\Documents\\GitHub\\Lectio\\JavaFX_UI\\sqlite-jdbc-3.16.1.jar
+file.reference.GMapsFX-2.10.0.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\GMapsFX-2.10.0.jar
+file.reference.GMapsFX-2.12.0.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\GMapsFX-2.12.0.jar
+file.reference.sqlite-jdbc-3.16.1.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\sqlite-jdbc-3.16.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=C:\\Users\\antho_000\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Anthony Tran\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
