--- a/JavaFX_UI/nbproject/project.properties
+++ b/JavaFX_UI/nbproject/project.properties
@@ -32,6 +32,12 @@ endorsed.classpath=
 excludes=
 file.reference.GMapsFX-2.10.0.jar=../../../Downloads/GMapsFX-2.10.0.jar
 file.reference.GMapsFX-2.12.0.jar=../../../Downloads/GMapsFX-2.12.0.jar
+file.reference.jxmaps-1.3.1.jar=../../../Downloads/jxmaps-1.3.1/lib/jxmaps-1.3.1.jar
+file.reference.jxmaps-linux32-1.3.1.jar=../../../Downloads/jxmaps-1.3.1/lib/jxmaps-linux32-1.3.1.jar
+file.reference.jxmaps-linux64-1.3.1.jar=../../../Downloads/jxmaps-1.3.1/lib/jxmaps-linux64-1.3.1.jar
+file.reference.jxmaps-mac-1.3.1.jar=../../../Downloads/jxmaps-1.3.1/lib/jxmaps-mac-1.3.1.jar
+file.reference.jxmaps-win-1.3.1.jar=../../../Downloads/jxmaps-1.3.1/lib/jxmaps-win-1.3.1.jar
+file.reference.license.jar=../../../Downloads/jxmaps-1.3.1/lib/license.jar
 file.reference.sqlite-jdbc-3.16.1.jar=../../../Downloads/sqlite-jdbc-3.16.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,7 +47,13 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.sqlite-jdbc-3.16.1.jar}:\
     ${file.reference.GMapsFX-2.12.0.jar}:\
-    ${file.reference.GMapsFX-2.10.0.jar}
+    ${file.reference.GMapsFX-2.10.0.jar}:\
+    ${file.reference.jxmaps-1.3.1.jar}:\
+    ${file.reference.jxmaps-linux32-1.3.1.jar}:\
+    ${file.reference.jxmaps-linux64-1.3.1.jar}:\
+    ${file.reference.jxmaps-mac-1.3.1.jar}:\
+    ${file.reference.jxmaps-win-1.3.1.jar}:\
+    ${file.reference.license.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
