--- a/JavaFX_UI/nbproject/private/private.properties
+++ b/JavaFX_UI/nbproject/private/private.properties
@@ -23,7 +23,7 @@ user.properties.file=/Users/filippopiggici/Library/Application Support/NetBeans/
 =======
 file.reference.GMapsFX-2.10.0.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\lib\\GMapsFX-2.10.0.jar
 file.reference.GMapsFX-2.12.0.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\lib\\GMapsFX-2.12.0.jar
-file.reference.sqlite-jdbc-3.16.1.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\sqlite-jdbc-3.16.1.jar
+file.reference.sqlite-jdbc-3.16.1.jar=C:\\Users\\Anthony Tran\\Documents\\GitHub\\Lectio\\JavaFX_UI\\src\\sqlite-jdbc-3.16.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
 user.properties.file=C:\\Users\\Anthony Tran\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
